# singapore-hdb-resale-prices

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml
data/: address.csv  mrt.csv  pln_area.geojson  region.geojson  resale_price_index.csv
notebook/: data_cleaning.ipynb
src/: main.py
src/core/: abbreviations.py  api.py  config.py  constants.py  path.py  save.py  transform.py
src/dashboard/: app.py  layout.py
src/dashboard/assets/: dagFunc.js  input.css  styles.css
src/dashboard/callbacks/: __init__.py  comparison.py  correlation.py  distribution.py  kpis.py  maps.py  ranking.py  trends.py
src/dashboard/components/: cards.py  dropdowns.py  tables.py
src/dashboard/datasets/: geo.py  loader.py
src/dashboard/metrics/: formatters.py  lookup.py
src/dashboard/models/: kpis.py
src/dashboard/transforms/: aggregations.py  enrichment.py  filters.py
src/dashboard/viz/: comparison.py  correlation.py  distribution.py  figure.py  maps.py  ranking.py  styles.py  theme.py  trends.py
src/ingestion/: address.py  flat.py  geo.py  mrt.py  price_index.py
src/schemas/: base.py  geojson.py  google.py  hdb.py
