[project]
name = "hdb-resale"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "aiolimiter>=1.2.1",
    "dash>=3.3.0",
    "dash-ag-grid>=33.3.3",
    "geopandas>=1.1.2",
    "geopy>=2.4.1",
    "ipykernel>=7.1.0",
    "lxml>=6.0.2",
    "nbformat>=5.10.4",
    "numpy>2.4.0",
    "pandas>=3.0.0",
    "plotly>=6.5.1",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.1",
]

[tool.setuptools.packages.find]
where = ["src"]
